# dynamic-graph

./: .gitignore  CLAUDE.md  Cargo.toml  celegans_graph.dot
crates/graph-boundary/: Cargo.toml
crates/graph-boundary/src/: analysis.rs  layer.rs  lib.rs  locus.rs  prescribe.rs  report.rs
crates/graph-boundary/src/analysis/: collect.rs  report.rs  scoring.rs
crates/graph-boundary/src/prescribe/: assembly.rs  candidates.rs  policy.rs
crates/graph-engine/: Cargo.toml
crates/graph-engine/benches/: engine.rs  internal_runtime_bench.rs  phase9_plasticity.rs  runtime_bench.rs  storage.rs
crates/graph-engine/examples/: celegans.rs  knowledge_graph.rs  minimal.rs  multi_kind_profile.rs  neural_population.rs  ring_dynamics.rs  rumor_spread.rs  runtime_demo.rs  sensor_fusion.rs  signal_propagation.rs  stress_emergence.rs  supply_chain.rs
crates/graph-engine/src/: adaptive.rs  client.rs  cohere.rs  controller.rs  coordinator.rs  diagnostics.rs  dynamics.rs  emergence.rs  engine.rs  handle.rs  inspection.rs  laws.rs  lib.rs  regime.rs  registry.rs  scheduled.rs  scheduler.rs  simulation.rs  stabilizer.rs  trace.rs
crates/graph-engine/src/cohere/: clustering.rs
crates/graph-engine/src/emergence/: default.rs  mod.rs
crates/graph-engine/src/emergence/default/: community.rs  (+1 more)
crates/graph-engine/src/engine/: aggregation.rs  apply.rs  batch.rs  dispatch.rs  emergence_apply.rs  mod.rs  pipeline.rs  provenance.rs  routing.rs  source.rs  state.rs  types.rs  world_ops.rs
crates/graph-engine/src/plasticity/: learner.rs  mod.rs  objective.rs
crates/graph-engine/src/regime/: adaptive.rs  classifier.rs  mod.rs  types.rs
crates/graph-engine/src/simulation/: accessors.rs  builder.rs  config.rs  ingest.rs  lifecycle.rs  mod.rs  observability.rs  plasticity_api.rs  runtime.rs  setup.rs  step_api.rs  storage_api.rs  types.rs  watch.rs  world_api.rs
crates/graph-engine/tests/: conflict_model.rs  controller_handle.rs  davis_women.rs  e2e_client.rs  engine_integration.rs  enron.rs  eu_email.rs  hep_ph.rs  integration.rs  karate_club.rs  lfr_dynamic.rs  partition_determinism.rs  phase2.rs  phase2_threshold.rs  phase2c_real_data.rs  phase9_engine.rs  phase9_objective_benchmark.rs  sociopatterns.rs  stability.rs
crates/graph-llm/: Cargo.toml
crates/graph-llm/examples/: boundary_workflow.rs  configure_demo.rs  ollama_smoke.rs  prediction_demo.rs
crates/graph-llm/src/: client.rs  configure.rs  error.rs  facade.rs  ingest.rs  lib.rs  narrate.rs  rag.rs  tension.rs
crates/graph-llm/tests/: boundary_regression.rs  prompt_regression.rs
crates/graph-query/: Cargo.toml
crates/graph-query/benches/: graph_query.rs
crates/graph-query/src/: api_dogfood.rs  causal_strength.rs  causality.rs  centrality.rs  coalgebra.rs  counterfactual.rs  debug.rs  deviation.rs  emergence.rs  entity_causality.rs  entity_query.rs  export.rs  filter.rs  labels.rs  lib.rs  metric.rs  planner.rs  profile.rs  query.rs  query_api.rs  temporal.rs  time_travel.rs  traversal.rs
crates/graph-query/src/causal_strength/: directed.rs  granger.rs  shared.rs
crates/graph-query/src/causality/: dag.rs  latest.rs  temporal.rs  trends.rs  types.rs
crates/graph-query/src/centrality/: balance.rs  brandes.rs  brokerage.rs  community.rs  indexed.rs  modularity.rs  rankings.rs  traversal.rs
crates/graph-query/src/counterfactual/: adapter.rs  analysis.rs  builder.rs  diff.rs
crates/graph-query/src/debug/: render.rs  trace.rs  types.rs
crates/graph-query/src/deviation/: analysis.rs  baseline.rs  observed.rs  types.rs
crates/graph-query/src/emergence/: api.rs  leave_one_out.rs  math.rs  psi.rs  render.rs  report.rs  series.rs  synergy.rs  types.rs
crates/graph-query/src/entity_causality/: cause.rs  layers.rs  upstream.rs
crates/graph-query/src/entity_query/: cohere_filters.rs  cohere_terminals.rs  entities_filters.rs  entities_terminals.rs  entity_projection.rs
crates/graph-query/src/export/: dot.rs
crates/graph-query/src/filter/: entities.rs  entity_bridge.rs  loci.rs  lookup.rs  metrics.rs  relationships.rs  tests.rs
crates/graph-query/src/labels/: dot.rs  entity_summary.rs  name_map.rs
crates/graph-query/src/planner/: explain.rs  predicates.rs  types.rs
crates/graph-query/src/profile/: adapter.rs  bundle.rs  metrics.rs  terminals.rs
crates/graph-query/src/query/: loci_filters.rs  loci_navigation.rs  loci_terminals.rs  relationship_aggregation.rs  relationship_filters.rs  relationship_navigation.rs  relationship_terminals.rs
crates/graph-query/src/query_api/: builders.rs  causal_analysis.rs  causal_log.rs  centrality.rs  entity_counterfactual.rs  filtered.rs  helpers.rs  results.rs  state_profile.rs  structural.rs  temporal_metrics.rs  types.rs
crates/graph-query/src/temporal/: frequency.rs  recent.rs  stats.rs
crates/graph-query/src/time_travel/: analysis.rs  result.rs
crates/graph-query/src/traversal/: activity.rs  analysis.rs  directed.rs  neighbors.rs  primitives.rs  topology.rs  undirected.rs
crates/graph-storage/: Cargo.toml
crates/graph-storage/src/: access.rs  batch.rs  error.rs  lib.rs  migration.rs  snapshot.rs  tables.rs  util.rs
crates/graph-storage/src/access/: session.rs
crates/graph-wal/: Cargo.toml
crates/graph-wal/src/: checkpoint.rs  compaction.rs  config.rs  error.rs  lib.rs  record.rs  recovery.rs  segment.rs  writer.rs
crates/graph-wal/tests/: integration.rs
crates/graph-world/: Cargo.toml
crates/graph-world/benches/: query_bench.rs
crates/graph-world/src/: change_log.rs  cohere_store.rs  context.rs  diff.rs  entity_store.rs  index.rs  lib.rs  locus_store.rs  metrics.rs  query.rs  relationship_store.rs  selector.rs  snapshot.rs  world.rs
crates/graph-world/src/diff/: collect.rs
crates/graph-world/src/metrics/: analysis.rs
crates/graph-world/src/store/: change_log.rs  cohere_store.rs  entity_store.rs  locus_store.rs  mod.rs  name_index.rs  pre_relationship_buffer.rs  property_store.rs  relationship_store.rs  subscription_store.rs
crates/graph-world/src/world/: batching.rs  mod.rs  mutation.rs  partition.rs  partitioning.rs  query.rs  snapshot.rs
(+164 files in other folders)
