[workspace]
members = [
    "crates/graph-core",
    "crates/graph-world",
    "crates/graph-engine",
    "crates/graph-testkit",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
graph-core = { path = "crates/graph-core" }
graph-world = { path = "crates/graph-world" }
graph-engine = { path = "crates/graph-engine" }
graph-testkit = { path = "crates/graph-testkit" }
rustc-hash = "2.1.1"
criterion = { version = "0.6", features = ["html_reports"] }
