[workspace]
members = [
    "crates/graph-core",
    "crates/graph-world",
    "crates/graph-query",
    "crates/graph-engine",
    "crates/graph-testkit",
    "crates/graph-storage",
    "crates/graph-schema",
    "crates/graph-boundary",
    "crates/graph-llm",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
graph-core = { path = "crates/graph-core" }
graph-world = { path = "crates/graph-world" }
graph-engine = { path = "crates/graph-engine" }
graph-query = { path = "crates/graph-query" }
graph-testkit = { path = "crates/graph-testkit" }
graph-storage = { path = "crates/graph-storage" }
graph-schema = { path = "crates/graph-schema" }
graph-boundary = { path = "crates/graph-boundary" }
graph-llm      = { path = "crates/graph-llm" }
redb = "2"
rustc-hash = "2.1.1"
smallvec = { version = "1", features = ["union", "serde"] }
criterion = { version = "0.6", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
crc32fast = "1"
tempfile = "3"
