[package]
name = "graph-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
storage = ["dep:graph-storage"]

[dependencies]
graph-core.workspace = true
graph-world.workspace = true
graph-query.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
rayon = "1"
graph-storage = { workspace = true, optional = true }

[dev-dependencies]
graph-testkit.workspace = true
criterion.workspace = true
tempfile = "3"

[lib]
path = "src/lib.rs"

[[example]]
name = "signal_propagation"

[[example]]
name = "ring_dynamics"

[[example]]
name = "sensor_fusion"

[[example]]
name = "neural_population"

[[example]]
name = "supply_chain"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "storage"
harness = false
required-features = ["storage"]
