[package]
name = "graph-engine"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
storage = ["dep:graph-storage"]
tokio = ["dep:tokio"]
perf-timing = []

[dependencies]
graph-core.workspace = true
graph-world.workspace = true
graph-query.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
rayon = "1"
graph-storage = { workspace = true, optional = true }
tokio = { version = "1", features = ["macros", "sync", "time", "rt"], optional = true }

[dev-dependencies]
graph-testkit.workspace = true
graph-schema.workspace = true
graph-boundary.workspace = true
criterion.workspace = true
tempfile = "3"

[lib]
path = "src/lib.rs"

[[example]]
name = "signal_propagation"

[[example]]
name = "ring_dynamics"

[[example]]
name = "sensor_fusion"

[[example]]
name = "neural_population"

[[example]]
name = "supply_chain"

[[example]]
name = "stress_emergence"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "phase9_plasticity"
harness = false

[[bench]]
name = "storage"
harness = false
required-features = ["storage"]
