[package]
name = "graph-query"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
graph-core.workspace = true
graph-world.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

[dev-dependencies]
graph-testkit.workspace = true

[lib]
path = "src/lib.rs"
