[package]
name = "graph-query"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
serde = ["dep:serde", "graph-core/serde"]

[dependencies]
graph-core.workspace = true
graph-world.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
graph-testkit.workspace = true
criterion.workspace = true
smallvec.workspace = true

[[bench]]
name = "graph_query"
harness = false

[lib]
path = "src/lib.rs"
