[package]
name = "graph-storage"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
graph-core = { workspace = true, features = ["serde"] }
graph-world = { workspace = true, features = ["serde"] }
redb.workspace = true
postcard.workspace = true
serde.workspace = true

[dev-dependencies]
graph-testkit.workspace = true
tempfile.workspace = true

[lib]
path = "src/lib.rs"
