[package]
name = "graph-wal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
graph-core = { workspace = true, features = ["serde"] }
graph-world = { workspace = true, features = ["serde"] }
serde.workspace = true
postcard.workspace = true
crc32fast = "1"

[dev-dependencies]
graph-testkit.workspace = true
graph-engine.workspace = true
tempfile.workspace = true

[lib]
path = "src/lib.rs"
