[package]
name = "graph-world"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
serde = ["graph-core/serde", "dep:serde"]

[dependencies]
graph-core.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
graph-testkit.workspace = true

[lib]
path = "src/lib.rs"
